# contract

./: Cargo.toml  README.md  config.json  private_key.pem
apps/contract/: Cargo.toml
apps/contract/src/: main.rs
apps/contract/src/modules/contract/: contract_controller.rs  contract_scope.rs  mod.rs
apps/contract/src/utils/: mod.rs  user_repository.rs
apps/contract/src/utils/ed2/: cifrade_functions.rs  mod.rs
apps/contract/src/utils/jwt/: generate.rs
apps/master/: Cargo.toml
apps/master/src/: main.rs
apps/master/src/modules/: mod.rs
apps/master/src/modules/accounting_account/: accounting_account_controller.rs  accounting_account_scope.rs  mod.rs
apps/master/src/modules/accounting_entry/: accounting_entry_controller.rs  mod.rs
apps/master/src/modules/accounting_record/: accounting_record_controller.rs  mod.rs
apps/master/src/modules/mst_restaurant/: mod.rs  mst_restaurant_controller.rs  mst_restaurant_scope.rs
apps/master/src/utils/infrastructure/: mod.rs  restaurant_repository.rs  user_repository.rs
apps/master/src/utils/repositories/: accounting_account_repository.rs  accounting_entry_repository.rs  accounting_record_repository.rs  mod.rs  user_repository.rs
bod_models/: Cargo.toml
bod_models/src/: lib.rs
bod_models/src/schemas/: mod.rs
bod_models/src/schemas/app/variables/: mod.rs  variables.rs  variables_error.rs
bod_models/src/schemas/config/: mod.rs
bod_models/src/schemas/config/card_plan/: card_plan.rs  card_plan_error.rs  mod.rs
bod_models/src/schemas/config/company/: company.rs  company_attributes.rs  company_errors.rs  mod.rs
bod_models/src/schemas/config/content_type/: content_type.rs  content_type_attributes.rs  content_type_error.rs  mod.rs
bod_models/src/schemas/config/email_template/: email_template.rs  email_template_attributes.rs  email_templates_errors.rs  mod.rs
bod_models/src/schemas/config/reset_token/: mod.rs  (+3 more)
bod_models/src/schemas/location/: mod.rs
bod_models/src/schemas/mst/: mod.rs
bod_models/src/schemas/prc/: mod.rs
bod_models/src/shared/: errors.rs  geo_point.rs  index_functions.rs  mod.rs  schema.rs
bod_models/src/shared/bson/: mod.rs  to_bson.rs  to_document.rs
bod_models/src/shared/jwt/: claims.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/database/: connection.rs
common/src/helpers/: mod.rs
common/src/helpers/ip/: ip_error.rs  ip_functions.rs  mod.rs
common/src/helpers/password/: encryptation_error.rs  mod.rs  password_functions.rs
common/src/helpers/smtp/: mod.rs  smtp_functions.rs
common/src/helpers/time/: mod.rs  time_functions.rs
common/src/middlewares/: date_contract_structure.rs  mod.rs  verify_token.rs
common/src/public/errors/: mod.rs  request_error.rs
common/src/public/models/: mod.rs  name.rs  path.rs
common/src/utils/: mod.rs
common/src/utils/macros/: get_attributes.rs  mod.rs
common/src/utils/ntex_private/: mod.rs
common/src/utils/repositories/: user_repository.rs
common/src/utils/traits/: hashmap.rs
(+264 files in other folders)
