[package]
name = "bod_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "3.0.1", features = ["snappy-compression"] }
futures = "0.3.30"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
serde_json = "1.0"
ntex = { version = "2.0.1", features = ["tokio"] }
mime = "0.3.17"
bson="2.11.0"
derive_more = "0.99.17"


