[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validator = { version = "0.18.1", features = ["derive"] }
derive_more = "0.99.17"
futures = "0.3.30"
mime = "0.3.17"
ntex = { version = "2.0.1", features = ["tokio"] }
ntex-files = "2.0.0"
ntex-multipart = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "3.0.1", features = ["snappy-compression"] }
async-trait = "0.1"
fxhash = "0.2.1"
rust-argon2 = "2.1.0"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
config = "0.14.0"
lettre = "0.11.7"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
bod_models={path = "../bod_models"}
if-addrs = "0.13.2"
chrono = "0.4.38"
tzf-rs = "0.4.9"
chrono-tz = "0.10.0"
bson = "2.12.0"


