[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "3.0.1", features = ["snappy-compression"] }
ntex = { version = "2.0.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.4.0"
tokio ="1.38.1"
async-trait = "0.1"
bson = "2.11.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
common={path = "../../common"}
bod_models={path = "../../bod_models"}
ntex-cors = "2.0.0"


